some major bug fixes, and started working on replication and distribution in nodes