@@ -1,15 +1,12 @@
 package com.vkdb.server;
 
-import javax.swing.text.DefaultEditorKit;
+import org.apache.commons.cli.*;
+
 import java.io.*;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.logging.Logger;
@@ -20,44 +17,61 @@ public class Server {
     private static final ConcurrentHashMap<String, SaveItem> database = new ConcurrentHashMap<>();
     private static final LinkedBlockingQueue<SaveItem> diskWriteItems = new LinkedBlockingQueue<>();
     private static final ConcurrentHashMap<String, AuthUser> authUsers = new ConcurrentHashMap<>();
-    private static final Path appendOnlyLogFilePath = Path.of("append-log.vdb");
-    private static final Path usersListPath = Path.of("users.vdb");
-    private static final long CACHE_CHECK_INTERVAL = 10 * 1000L; // cache check interval
-    private static final long COMPACTION_INTERVAL = 200 * 1000L;  // compaction interval
+    private static final LinkedBlockingQueue<NotifyItem> notificationsQueue = new LinkedBlockingQueue<>();
+    private static final LinkedList<SocketItem> replicas = new LinkedList<>();
 
 
     public static void main(String[] args) {
         int port = 6969;
+        Options options = new Options();
+        Option portOption = new Option("p", "port", true, "Port for the server to run");
+        portOption.setRequired(false);
+
+        options.addOption(portOption);
+        CommandLineParser parser = new DefaultParser();
+        HelpFormatter formatter = new HelpFormatter();
+        CommandLine cmd;
+
+        try {
+            cmd = parser.parse(options, args);
+            port = Integer.parseInt(cmd.getOptionValue("port"));
+        } catch (Exception e) {
+            logger.info(e.getLocalizedMessage());
+            formatter.printHelp("utility-name", options);
+            System.exit(1);
+            return;
+        }
+
         try (ServerSocket server = new ServerSocket(port)) {
             logger.info("Server is ready to accept connections on port " + port);
 
             try {
-                Files.createFile(appendOnlyLogFilePath);   // creating file for append only log if not exists
+                Files.createFile(Constants.APPEND_ONLY_LOG_FILE_PATH);   // creating file for append only log if not exists
             } catch (FileAlreadyExistsException e) {
-                logger.info("Append only log file exists at " + appendOnlyLogFilePath.toAbsolutePath());
+                logger.info("Append only log file exists at " + Constants.APPEND_ONLY_LOG_FILE_PATH.toAbsolutePath());
             }
 
             try {
-                Files.createFile(usersListPath);   // creating file for storing users if not exists
+                Files.createFile(Constants.USER_LIST_PATH);   // creating file for storing users if not exists
             } catch (FileAlreadyExistsException e) {
-                logger.info("Users list file exists at " + usersListPath.toAbsolutePath());
+                logger.info("Users list file exists at " + Constants.USER_LIST_PATH.toAbsolutePath());
             }
 
-            LinkedBlockingQueue<NotifyItem> notificationsQueue = new LinkedBlockingQueue<>();
+            // Starting 5 virtual threads to handle different tasks
+            Thread.startVirtualThread(Server::handleNotifications);     // To handle notifications sending to other clients
+            Thread.startVirtualThread(Server::handlePersistence);       // To handle saving items
+            Thread.startVirtualThread(Server::handleTtlExpiration);     // To handle expiring keys
+            Thread.startVirtualThread(Server::handleCompaction);        // to handle compaction
+            Thread.startVirtualThread(Server::handleLoadUsers);
 
-            Thread.startVirtualThread(() -> handleNotifications(notificationsQueue)); // To Handle NOTIFY from other clients
-            Thread.startVirtualThread(Server::handlePersistence); // To handle saving items
-            Thread.startVirtualThread(Server::handleTtlExpiration);  // To handle expiring keys
-            Thread.startVirtualThread(Server::doCompaction);  // to handle compaction
-
-            // adding a default user
-            authUsers.putIfAbsent("admin", new AuthUser("admin", "admin"));
+            // Shutdown hook , called before shutting down jvm
+            Runtime.getRuntime().addShutdownHook(new Thread(Server::handleShutDown));
 
             while (true) {
                 Socket socket = server.accept(); // accepting new sockets
                 String id = socket.getInetAddress().getHostAddress() + ":" + socket.getPort();
                 SocketItem socketItem = new SocketItem(id, socket, database, new DataOutputStream(socket.getOutputStream()), new DataInputStream(socket.getInputStream()));
-                Thread.startVirtualThread(new ClientHandler(socketItem, notificationsQueue, keySocketsMap, diskWriteItems, authUsers)); // starting new thread
+                Thread.startVirtualThread(new ClientHandler(socketItem, notificationsQueue, keySocketsMap, diskWriteItems, authUsers, replicas)); // starting new thread
             }
 
         } catch (Exception e) {
@@ -65,11 +79,11 @@ public class Server {
         }
     }
 
-    private static void handleNotifications(LinkedBlockingQueue<NotifyItem> notifyItems) {
+    private static void handleNotifications() {
         try {
             while (true) {
                 // we take an item from queue
-                NotifyItem notifyItem = notifyItems.take();
+                NotifyItem notifyItem = notificationsQueue.take();
                 logger.info("Got a notification from to process for a key" + notifyItem.getKey());
 
                 for (SocketItem socketItem : notifyItem.getSocketItems()) {
@@ -85,11 +99,10 @@ public class Server {
     }
 
     private static void handlePersistence() {
-        try {
-            // replaying the append only log file format for setting the data
-            BufferedReader reader = new BufferedReader(new FileReader(appendOnlyLogFilePath.toFile()));
+        try (BufferedReader reader = new BufferedReader(new FileReader(Constants.APPEND_ONLY_LOG_FILE_PATH.toFile()))) {
 
-            logger.info("Reading the append only log file at : " + appendOnlyLogFilePath.toAbsolutePath());
+            // replaying the append only log file format for setting the data
+            logger.info("Reading the append only log file at : " + Constants.APPEND_ONLY_LOG_FILE_PATH.toAbsolutePath());
 
             reader.lines().forEach(line -> {
                 String[] parts = line.split("=");
@@ -100,7 +113,7 @@ public class Server {
                     String value = parts[2];
 
                     switch (operation) {
-                        case "S" -> database.put(key, new SaveItem(key, value, "S"));
+                        case "S", "SX" -> database.put(key, new SaveItem(key, value, "S"));
                         case "D" -> database.remove(key);
                         default -> logger.info("No operation");
                     }
@@ -111,8 +124,6 @@ public class Server {
 
             });
 
-            reader.close();
-
             logger.info("Reading completed saved : " + database.size() + " entries");
 
 
@@ -120,7 +131,11 @@ public class Server {
                 SaveItem item = diskWriteItems.take();
                 logger.info("Got a item to save with key : " + item.getKey() + " with value " + item.getValue());
 
-                Files.writeString(appendOnlyLogFilePath, item.toString(), StandardOpenOption.APPEND);
+                try (FileOutputStream fos = new FileOutputStream(Constants.APPEND_ONLY_LOG_FILE_PATH.toFile(), true)) {
+                    fos.write(item.toString().getBytes());
+                    fos.flush();
+                    fos.getFD().sync(); // Ensures data is on disk
+                }
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -130,7 +145,7 @@ public class Server {
     public static void handleTtlExpiration() {
         try {
             while (true) {
-                Thread.sleep(CACHE_CHECK_INTERVAL); // sleeping because we don't want to check continuously
+                Thread.sleep(Constants.CACHE_CHECK_INTERVAL); // sleeping because we don't want to check continuously
 
                 // checking continuously for ttl
                 logger.info("Checking ttl");
@@ -146,17 +161,17 @@ public class Server {
         }
     }
 
-    private static void doCompaction() {
+    private static void handleCompaction() {
         try {
             while (true) {
-                Thread.sleep(COMPACTION_INTERVAL);
+                Thread.sleep(Constants.COMPACTION_INTERVAL);
 
                 logger.info("Starting compaction");
 
                 Map<String, SaveItem> latestEntries = new LinkedHashMap<>();
                 Set<String> deletedKeys = new HashSet<>();
 
-                try (RandomAccessFile accessFile = new RandomAccessFile(appendOnlyLogFilePath.toFile(), "r")) {
+                try (RandomAccessFile accessFile = new RandomAccessFile(Constants.APPEND_ONLY_LOG_FILE_PATH.toFile(), "r")) {
                     if (accessFile.length() == 0) continue; // skipping if we have 0 entries
                     long pointer = accessFile.length() - 1;
                     StringBuilder lineBuilder = new StringBuilder();
@@ -190,6 +205,48 @@ public class Server {
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    private static void handleLoadUsers() {
+        logger.info("Started loading users");
+        try (BufferedReader reader = new BufferedReader(new FileReader(Constants.USER_LIST_PATH.toFile()))) {
+
+            reader.lines().forEach(line -> {
+                String[] parts = line.split("-");
+
+                if (parts.length == 2) {
+                    String username = parts[0];
+                    String password = parts[1];
+                    authUsers.putIfAbsent(username, new AuthUser(username, password));
+                } else {
+                    logger.info("Malformed entry when loading users at line : " + line);
+                }
+            });
+
+
+            logger.info("Users loading completed found " + authUsers.size() + " users");
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    private static void handleShutDown() {
+        logger.info("Shutdown initiated. Flushing disk write queue...");
+        try {
+            SaveItem item;
+            while ((item = diskWriteItems.poll()) != null) {
+                try (FileOutputStream fos = new FileOutputStream(Constants.APPEND_ONLY_LOG_FILE_PATH.toFile(), true)) {
+                    fos.write(item.toString().getBytes());
+                    fos.flush();
+                    fos.getFD().sync();
+                }
+            }
+            logger.info("All pending disk writes flushed.");
+        } catch (Exception e) {
+            logger.severe("Error during shutdown flush: " + e.getMessage());
+        }
+        logger.info("vkdb server shutdown complete.");
     }
 
 
@@ -229,7 +286,7 @@ public class Server {
             }
 
             // Atomically replace the original file with the compacted one
-            Files.move(compactedFilePath, appendOnlyLogFilePath, StandardCopyOption.REPLACE_EXISTING);
+            Files.move(compactedFilePath, Constants.APPEND_ONLY_LOG_FILE_PATH, StandardCopyOption.REPLACE_EXISTING);
         } catch (Exception e) {
             e.printStackTrace();
         }
